--- a/cgi_fcgi/slog_flogin.conf
+++ b/cgi_fcgi/slog_flogin.conf
@@ -1,6 +1,5 @@
 SLOG_CONFIG_ID 35
 SLOG_OUT_TYPE 2
 SLOG_LOG_FILE /var/log/mtreport/slog_flogin.log
-CS_PATH ../monitor/
+CS_PATH ../htdocs/monitor/
 IMG_PATH ../monitor/images/
-CGI_PATH ../cgi-bin/
