内置插件逻辑

--- a/slog_mtreport_client/extension/linux_base/Makefile
+++ b/slog_mtreport_client/extension/linux_base/Makefile
@@ -1,21 +1,13 @@
-
-COMM_INC = -I/usr/include/mtagent_api
-COMM_LIB = -lmtreport_api
+include ../../../make_env
+COMM_INC = -I${MTLIB_INCLUDE_PATH}/mtreport_api
+COMM_LIB = -lmtreport_api 
 
 # 注意插件目录名和插件文件名一样，本插件为: linux_base 
 TARGETS_DIR = ../../xrkmonitor_plus/linux_base
 TARGETS = linux_base.so 
 
-ifeq ($(findstring debug, $(makecmd)), debug)
-DEBUG := -g -DMT_DEBUG
-else
-RELEASE :=  
-endif
-
 CC = g++ 
-
-WARNINGS := -Wall -Wsign-compare -Wno-strict-aliasing -Wno-write-strings -Wno-array-bounds -Wno-unused-but-set-variable -fpermissive
-CXXFLAGS := -fPIC $(WARNINGS) $(DEBUG) $(RELEASE) $(COMM_INC) 
+CXXFLAGS_LIB += $(COMM_INC)
 
 CONFIG_FILE = linux_base.conf
 all:$(TARGETS)
@@ -24,10 +16,10 @@ SRC := $(wildcard *.cpp)
 OBJ := $(SRC:.cpp=.o)
 
 .cpp.o:
-	$(CC) $(CXXFLAGS) $(COMM_INC) -c $(filter %.cpp, $^)
+	$(CC) $(CXXFLAGS_LIB) -c $(filter %.cpp, $^)
 
 $(TARGETS): ${OBJ} 
-	$(CC) $(CXXFLAGS) -fPIC -shared -o $@ $^  $(COMM_LIB)
+	$(CC) $(CXXFLAGS_LIB) -shared -o $@ $^  $(COMM_LIB)
 
 install:
 	strip $(TARGETS)
