--- a/cgi_fcgi/mt_slog_user.conf
+++ b/cgi_fcgi/mt_slog_user.conf
@@ -3,3 +3,4 @@ SLOG_OUT_TYPE 2
 SLOG_LOG_FILE /var/log/mtreport/mt_slog_user.log
 CS_PATH ../htdocs/monitor/
 DOC_PATH /monitor/
+CGI_PATH /cgi-bin/
