--- a/cgi_fcgi/mt_slog.conf
+++ b/cgi_fcgi/mt_slog.conf
@@ -1,6 +1,7 @@
 SLOG_CONFIG_ID 34 
 DOC_PATH /monitor/
+CS_PATH ../htdocs/monitor/
+CGI_PATH /cgi-bin/
 SLOG_OUT_TYPE 2
 SLOG_LOG_FILE /var/log/mtreport/mt_slog.log
-CS_PATH ../htdocs/monitor/
-DOC_PATH /monitor/
+SLOG_SERVER_CONFIG_ID 38
