--- a/cgi_fcgi/mt_slog_monitor.conf
+++ b/cgi_fcgi/mt_slog_monitor.conf
@@ -3,3 +3,4 @@ SLOG_LOG_FILE /var/log/mtreport/mt_slog_monitor.log
 SLOG_OUT_TYPE 2
 CS_PATH ../htdocs/monitor/
 DOC_PATH /monitor/
+CGI_PATH /cgi-bin/
