--- a/cgi_fcgi/slog_flogin.conf
+++ b/cgi_fcgi/slog_flogin.conf
@@ -1,10 +1,6 @@
 SLOG_CONFIG_ID 35
 SLOG_OUT_TYPE 2
-SLOG_LOG_FILE /var/log/mtreport/flogin.log
+SLOG_LOG_FILE /var/log/mtreport/slog_flogin.log
 CS_PATH ../htdocs/monitor/
-IMG_PATH ../monitor/images/
-CGI_PATH ../cgi-bin/
-VCODE_IMG_PATH /srv/www/htdocs/monitor/vcode/
-VCODE_IMG_AC_PATH ../monitor/vcode/
-MASTER_DOMAIN_URL 192.168.128.128 
-#ENABLE_CGI_DEBUG  1317791
+CGI_PATH /cgi-bin/
+DOC_PATH /monitor/
