--- a/slog_mtreport_client/slog_mtreport_client.conf
+++ b/slog_mtreport_client/slog_mtreport_client.conf
@@ -1,6 +1,6 @@
 CLIENT_LOCAL_LOG_FILE slog_mtreport_client.log
-CLIENT_LOCAL_LOG_TYPE 255
+CLIENT_LOCAL_LOG_TYPE warn|error|fatal|info 
 AGENT_ACCESS_KEY 232k8s8d8f20@#@%@#$@skdfj2351%^
-LOG_FREQ_LIMIT_PER_SEC 10000
+LOG_FREQ_LIMIT_PER_SEC 10
 ENABLE_ENCRYPT_DATA 0
 SERVER_MASTER 192.168.128.128
