--- a/slog_mtreport_server/slog_mtreport_server.conf
+++ b/slog_mtreport_server/slog_mtreport_server.conf
@@ -3,4 +3,4 @@ SLOG_LOG_FILE_NUM 2
 SLOG_LOG_FILE ./slog_mtreport_server.log
 SLOG_OUT_TYPE 3
 SLOG_SET_TEST 1
-SLOG_TYPE 255
+SLOG_TYPE info|error|reqerr|warn|fatal 
