--- a/slog_tool/slog_tool.conf
+++ b/slog_tool/slog_tool.conf
@@ -1,5 +1,5 @@
 SLOG_OUT_TYPE 1 
-SLOG_TYPE 255
+SLOG_TYPE info|error|reqerr|fatal|debug|warn 
 SLOG_LOG_FILE ./slog_tool.log
 SLOG_SET_TEST 1
 SLOG_LOG_TO_STD 0
