--- a/slog_mtreport_client/Makefile
+++ b/slog_mtreport_client/Makefile
@@ -14,6 +14,9 @@ DEP := $(SRC:.cpp=.d)
 
 $(TARGETS): ${OBJ} 
 	$(CC) -o $@ $^ $(COMM_LIB) -lrt
+ifeq ($(USE_DLL_COMM_LIB), yes) 
+	strip $(TARGETS)
+endif
 
 clean: 
 	rm -f *.o
