--- a/cgi_fcgi/mt_slog_warn.conf
+++ b/cgi_fcgi/mt_slog_warn.conf
@@ -1,6 +1,6 @@
 SLOG_CONFIG_ID 48
 SLOG_OUT_TYPE 2
 SLOG_LOG_FILE /var/log/mtreport/mt_slog_warn.log
-CS_PATH ../htdocs/monitor/
-DOC_PATH /monitor/
+CS_PATH /srv/www/htdocs/
+DOC_PATH /xrkmonitor/
 CGI_PATH /cgi-bin/
