--- a/cgi_fcgi/mt_slog.conf
+++ b/cgi_fcgi/mt_slog.conf
@@ -1,6 +1,6 @@
 SLOG_CONFIG_ID 34 
-DOC_PATH /monitor/
-CS_PATH ../htdocs/monitor/
+DOC_PATH /xrkmonitor/
+CS_PATH /srv/www/htdocs/
 CGI_PATH /cgi-bin/
 SLOG_OUT_TYPE 2
 SLOG_LOG_FILE /var/log/mtreport/mt_slog.log
