--- a/cgi_fcgi/fastcgi.conf
+++ b/cgi_fcgi/fastcgi.conf
@@ -36,7 +36,7 @@ LoadModule fastcgi_module  /usr/lib64/apache2/mod_fastcgi.so
 	# Dynamic FastCGI applications can be put in this directory.
 	# Use the FastCgiConfig directive in your httpd.conf.local
 	# to change the defaults for them.
-	# http://www.fastcgi.com/mod_fastcgi/docs/mod_fastcgi.html#FastCgiConfig
+	# http:/www.fastcgi.com/mod_fastcgi/docs/mod_fastcgi.html#FastCgiConfig
 	<Directory "/srv/www/fcgi-bin">
 		AllowOverride None
 		Options +ExecCGI -Includes
@@ -54,15 +54,15 @@ LoadModule fastcgi_module  /usr/lib64/apache2/mod_fastcgi.so
 	# Static or external FastCGI applications are started when apache
 	# is started. They are configured with the
 	# FastCgiServer and FastCgiExternalServer directives:
-	# http://www.fastcgi.com/mod_fastcgi/docs/mod_fastcgi.html#FastCgiServer
-	# http://www.fastcgi.com/mod_fastcgi/docs/mod_fastcgi.html#FastCgiExternalServer
+	# http:/www.fastcgi.com/mod_fastcgi/docs/mod_fastcgi.html#FastCgiServer
+	# http:/www.fastcgi.com/mod_fastcgi/docs/mod_fastcgi.html#FastCgiExternalServer
 	# which can be put into httpd.conf.local.
 	#
 	# Examples:
 	#FastCgiServer /srv/www/fcgi-bin/echo -processes 5
 	#FastCgiServer /srv/www/htdocs/some/path/echo.fcgi
 
-	# see http://www.FastCGI.com/docs/faq.html#typical_httpd.conf for more
+	# see http:/www.FastCGI.com/docs/faq.html#typical_httpd.conf for more
 	# information...
 
 </IfModule>
