--- a/cgi_fcgi/mt_slog_monitor.conf
+++ b/cgi_fcgi/mt_slog_monitor.conf
@@ -1,6 +1,6 @@
 SLOG_CONFIG_ID 41
 SLOG_LOG_FILE /var/log/mtreport/mt_slog_monitor.log
 SLOG_OUT_TYPE 2
-CS_PATH /srv/www/htdocs/
+CS_PATH /srv/www/htdocs/xrkmonitor/
 DOC_PATH /xrkmonitor/
 CGI_PATH /cgi-bin/
