--- a/cgi_fcgi/slog_flogin.conf
+++ b/cgi_fcgi/slog_flogin.conf
@@ -1,6 +1,6 @@
 SLOG_CONFIG_ID 35
 SLOG_OUT_TYPE 2
 SLOG_LOG_FILE /var/log/mtreport/slog_flogin.log
-CS_PATH /srv/www/htdocs/
+CS_PATH /srv/www/htdocs/xrkmonitor/
 CGI_PATH /cgi-bin/
 DOC_PATH /xrkmonitor/
