--- a/slog_write/slog_write.conf
+++ b/slog_write/slog_write.conf
@@ -5,3 +5,4 @@ SLOG_LOG_FILE_NUM 2
 WRITE_SHOW_PER_SECS 60
 SLOG_OUT_TYPE 3
 ATTR_ID_WRITE_LOG_RECORDS 332
+SLOG_SERVER_FILE_PATH  /home/mtreport/slog/
