--- a/lib/clearsilver/util/Makefile.srcs
+++ b/lib/clearsilver/util/Makefile.srcs
@@ -3,6 +3,6 @@ VER_MINOR = 1.0
 INSTALL_INC = *.h
 SRCS = neo_err.c neo_files.c neo_misc.c neo_rand.c ulist.c neo_hdf.c neo_str.c neo_date.c wildmat.c ulocks.c rcfs.c skiplist.c dict.c filter.c neo_net.c neo_server.c neo_hash.c
 
-INCLS = ./neo_server.h ./ulocks.h ./dict.h ./neo_rand.h ./neo_err.h ./neo_hdf.h ./neo_hash.h ./neo_date.h ./osdep.h ./wildmat.h ./neo_misc.h ./wdb.h ./neo_str.h ./ulist.h ./rcfs.h ./filter.h ./skiplist.h ./neo_files.h ./neo_net.h
+INCLS = ./neo_hdf.h ./dict.h ./neo_net.h ./neo_misc.h ./neo_rand.h ./ulist.h ./neo_hash.h ./wildmat.h ./neo_date.h ./wdb.h ./neo_files.h ./skiplist.h ./neo_server.h ./neo_str.h ./filter.h ./neo_err.h ./osdep.h ./ulocks.h ./rcfs.h
 
 INCLUDE = -I. -I..
