--- a/lib/libsockets/Makefile.Defines.linux-x86-32
+++ b/lib/libsockets/Makefile.Defines.linux-x86-32
@@ -12,11 +12,14 @@ CFLAGS +=	-DLINUX
 CFLAGS +=	-fPIC
 
 LIBS +=		\
+		-lssl -lcrypto \
 		-lpthread
 
 OBJS +=		Semaphore.o
 
 LDFLAGSSO =	-shared \
+		-Wl,-lssl \
+                -Wl,-lcrypto \
 		-Wl,-lxml2 \
 		-Wl,-lpthread \
 		-Wl,-h$(SONAME) \
