--- a/slog_mtreport_server/slog_mtreport_server.conf
+++ b/slog_mtreport_server/slog_mtreport_server.conf
@@ -2,5 +2,4 @@ SLOG_CONFIG_ID 40
 SLOG_LOG_FILE_NUM 2
 SLOG_LOG_FILE ./slog_mtreport_server.log
 SLOG_OUT_TYPE 3
-SLOG_SET_TEST 1
-SLOG_TYPE info|error|reqerr|warn|fatal 
+#SLOG_SET_TEST 1
