update log file format

--- a/slog_write/slog_write.conf
+++ b/slog_write/slog_write.conf
@@ -1,6 +1,8 @@
 SLOG_CONFIG_ID 37 
 SLOG_LOG_FILE ./slog_write.log
-SLOG_PROCESS_COUNT 5
+SLOG_PROCESS_COUNT 2
+##SCAN_LOGFILE_AGAIN 1
+##CHECK_WRITE_PROCESS_TIME 600
 SLOG_LOG_FILE_NUM 2
 WRITE_SHOW_PER_SECS 60
 SLOG_OUT_TYPE 3
