default not daemon

--- a/slog_config/slog_config.conf
+++ b/slog_config/slog_config.conf
@@ -4,4 +4,4 @@ SLOG_LOG_FILE ./slog_config.log
 DELETE_MONITOR_RECORDS 1
 DELETE_DB_RECORD 1 
 #SLOG_SET_TEST 1
-SYSTEM_FLAG_DAEMON 1
+#SYSTEM_FLAG_DAEMON 1
