一键部署&插件状态上报

--- a/slog_monitor_server/slog_monitor_server.conf
+++ b/slog_monitor_server/slog_monitor_server.conf
@@ -2,5 +2,7 @@ SLOG_CONFIG_ID 63
 SLOG_PROCESS_COUNT 2
 SLOG_LOG_FILE ./slog_monitor_server.log
 SLOG_OUT_TYPE 3
+###SLOG_TYPE all
+SLOG_SET_TEST 1
 LISTEN_PORT 38080 
 SLOG_LOG_FILE_NUM 2
