--- a/slog_mtreport_client/slog_mtreport_client.conf
+++ b/slog_mtreport_client/slog_mtreport_client.conf
@@ -1,3 +1,9 @@
 ENABLE_ENCRYPT_DATA 0
 SERVER_MASTER 192.168.128.128
+CUST_ATTR_SRV_IP 127.0.0.1
+CUST_ATTR_SRV_PORT 38080
+CUST_LOG_SRV_IP 127.0.0.1
+CUST_LOG_SRV_PORT 28080
+CLIENT_LOCAL_LOG_FILE slog_mtreport_client.log
+CLIENT_LOCAL_LOG_TYPE warn|error|fatal|all
 
