告警回调脚本

--- a/slog_deal_warn/slog_deal_warn.conf
+++ b/slog_deal_warn/slog_deal_warn.conf
@@ -2,6 +2,7 @@ SLOG_CONFIG_ID 64
 SLOG_LOG_FILE ./slog_deal_warn.log
 SLOG_OUT_TYPE 3
 SLOG_MEMCACHE_DISABLE 1
-SLOG_PROCESS_COUNT 4
+SLOG_PROCESS_COUNT 1
 XRKMONITOR_UID 23
 XRKMONITOR_UKEY 8DMkJ2r2MQNpA3N4kSAsM4qXMjy8vnVr 
+SLOG_SET_TEST 1
